use node 9 and add some initial stuff

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charSet="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>elm-webpack-starter</title>
-    <meta name="description" content="Elm Webpack Starter"/>
-    <meta name="author" content="Peter Morawiec"/>
+    <title>Elmodor</title>
+    <meta name="description" content="Elmodoro, a pomodoro app written in elm"/>
+    <meta name="author" content="Max Strübing"/>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
   </head>
   <body>
