--- a/src/static/index.html
+++ b/src/static/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charSet="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Elmodor</title>
+    <title>Elmodoro</title>
     <meta name="description" content="Elmodoro, a pomodoro app written in elm"/>
     <meta name="author" content="Max Strübing"/>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
