add shortcut and ga

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,26 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" href="%PUBLIC_URL%/tomato-152-239275.png">
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="%PUBLIC_URL%/tomato-152-239275.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="%PUBLIC_URL%/tomato-144-239275.png">
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="%PUBLIC_URL%/tomato-120-239275.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="%PUBLIC_URL%/tomato-114-239275.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="%PUBLIC_URL%/tomato-72-239275.png">
+    <link rel="apple-touch-icon-precomposed" href="%PUBLIC_URL%/tomato-57-239275.png">
+    <link rel="icon" href="%PUBLIC_URL%/tomato-32-239275.png" sizes="32x32">
+
     <title>Elmodoro</title>
-</head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-72326389-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-72326389-2');
+    </script>
+    </head>
 <body>
     <noscript>
         You need to enable JavaScript to run this app.
